--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,22 @@
 language: ruby
 rvm:
   - 2.2.3
-before_install: gem install bundler -v 1.10.6
+script: bundle exec rake test
+before_deploy:
+  - bundle exec rake gem:build
+  - export GEM_FILE="$(ls -1 pkg/*.gem | tail -n1)"
+deploy:
+  - provider: rubygems
+    api_key: $RUBYGEMS_KEY
+    gem: rbstruct
+    on:
+      tags: true
+      repo: kaffepanna/rbtelldus
+  - provider: releases
+    api_key:
+      secure: $GITHUB_TOKEN
+    file: ${GEM_FILE}
+    file_glob: true
+    on:
+      tags: true
+      repo: kaffepanna/rbstruct
