--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 rvm:
   - 2.2.3
-script: bundle exec rake test
+script: bundle exec rake spec
 before_deploy:
   - bundle exec rake gem:build
   - export GEM_FILE="$(ls -1 pkg/*.gem | tail -n1)"
