--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ before_deploy:
   - export GEM_FILE="$(ls -1 pkg/*.gem | tail -n1)"
 deploy:
   - provider: rubygems
-    api_key: $RUBYGEMS_KEY
+    api_key: ${RUBYGEMS_KEY}
     gem: rbstruct
     on:
       tags: true
       repo: kaffepanna/rbstruct
   - provider: releases
-    api_key: $GITHUB_TOKEN
+    api_key: ${GITHUB_TOKEN}
     file: ${GEM_FILE}
     file_glob: true
     on:
